<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
     android:background="@drawable/gruen">

 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="519dp"
     android:orientation="vertical"
     android:paddingTop="10dp" >

     <EditText
         android:id="@+id/editText1"
         android:layout_width="257dp"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView1"
         android:layout_alignBottom="@+id/textView1"
         android:layout_gravity="center"
         android:layout_toRightOf="@+id/textView1"
         android:hint="@string/Name"
         android:paddingTop="15dp" />

     <EditText
         android:id="@+id/editText2"
         android:layout_width="233dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editText1"
         android:layout_below="@+id/textView2"
         android:layout_gravity="center"
         android:height="110dp"
         android:hint="@string/Beschreibung"
         android:inputType="textMultiLine"
         android:maxLines="6"
         android:paddingTop="15dp" >

         <requestFocus />
     </EditText>

    
     
     
      <Switch
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/editText2"
         android:layout_marginTop="16dp"
         android:text="@string/Alarm" 
         android:layout_gravity="center"/>

      <CalendarView
          android:id="@+id/timePicker2"
          android:layout_width="250dp"
          android:layout_height="250dp"
          android:layout_marginTop="16dp"
          android:layout_weight="0.72" 
          android:layout_gravity="center"/>

     <TimePicker
         android:id="@+id/timePicker1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/switch1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:layout_gravity="center"/>

     <Button
         android:id="@+id/button1"
         android:layout_width="139dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_weight="0.33"
         android:text="@string/Speichern" 
         android:onClick="goListeSpeichern"
         android:layout_gravity="center"
         />
    
 </LinearLayout>

</ScrollView>
